FastAPI app build is completed

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,10 +28,10 @@
         <input type="number" step="0.01" name="Distance_GTET200" id="Distance_GTET200" required>
 
         <label for="Shape_Length">Shape__Length:</label>
-        <input type="number" step="0.01" name="Shape_Length" id="Shape_Length" required>
+        <input type="number" step="0.01" name="Shape__Length" id="Shape_Length" required>
 
         <label for="Shape_Area">Shape__Area:</label>
-        <input type="number" step="0.01" name="Shape_Area" id="Shape_Area" required>
+        <input type="number" step="0.01" name="Shape__Area" id="Shape_Area" required>
 
         <label for="Percentile_GTET100">Percentile (GTET 100 Max Voltage):</label>
         <select name="Percentile_GTET100" id="Percentile_GTET100" required>
@@ -49,8 +49,8 @@
             <option value="75th to 100th">75th to 100th</option>
         </select>
 
-        <label for="Percentile_CASIO">Percentile (CAISO):</label>
-        <select name="Percentile_CASIO" id="Percentile_CASIO" required>
+        <label for="Percentile_CAISO">Percentile (CAISO):</label>
+        <select name="Percentile_CAISO" id="Percentile_CAISO" required>
             <option value="0 to 25th">0 to 25th</option>
             <option value="25th to 50th">25th to 50th</option>
             <option value="50th to 75th">50th to 75th</option>
